module/user-rail/user-rail.css
#chat-widget-messages .user-status-avatar {
  width: var(--avatar-size);
  height: var(--avatar-size);
  overflow: visible;
}

#chat-widget-messages .avatar-frame {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: visible;
}

#chat-widget-messages .avatar-frame.online::before,
#chat-widget-messages .avatar-frame.offline::before,
#chat-widget-messages .avatar-frame.away::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0.75rem;
  height: 0.75rem;
  border: 0.125rem solid #3d3d3d;
  border-radius: 50%;
  transform: translate(-50%, 50%);
  z-index: 1;
}

#chat-widget-messages .avatar-frame.online::before {
  background-color: #40d04f;
}

#chat-widget-messages .avatar-frame.offline::before {
  background-color: #f9515c;
}

#chat-widget-messages .avatar-frame.away::before {
  background-color: #adafca;
}

#chat-widget-messages .avatar-img {
  display: block;
  width: 100%;
  height: 100%;
  border: none;
  position: relative;
  z-index: 0;
}

#chat-widget-messages .avatar-frame::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  width: var(--frame-size);
  height: var(--frame-size);
  background-image: var(--frame);
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 1;
  opacity: 0;
  transition: opacity 0.2s ease-in-out;
}

#chat-widget-messages .chat-widget-message:hover .avatar-frame::after,
#chat-widget-messages .chat-widget-message.active .avatar-frame::after {
  opacity: 1;
}

#chat-widget-messages {
  --avatar-size: 3rem;
  --frame-size: calc(var(--avatar-size) + 0.25rem);
  --frame: none;
  --indicator-size: 0.5rem;
  --indicator-bar-width: 0.625rem;
}

#chat-widget-messages .chat-widget-message {
  position: relative;
  overflow: visible;
}

#chat-widget-messages .chat-widget-message::before {
  content: "";
  position: absolute;
  left: 0;
  /* Center relative to message height so it lines up with the avatar */
  top: 50%;
  width: var(--indicator-size);
  height: var(--indicator-size);
  background-color: var(--accent);
  border-radius: 50%;
  opacity: 0;
  transform: translate(-50%, -50%);
  transition: all 0.2s ease-in-out;
}

#chat-widget-messages .chat-widget-message.has-notification::before {
  opacity: 1;
}

#chat-widget-messages .chat-widget-message:hover::before,
#chat-widget-messages .chat-widget-message.active::before {
  height: calc(var(--avatar-size) - 0.5rem);
  width: var(--indicator-bar-width);
  border-radius: var(--indicator-bar-width);
  opacity: 1;
  transform: translate(-50%, -50%);
}

